--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -262,6 +262,10 @@
   background-color: #1e3932;
 }
 
+[data-theme="dark"] .heroImage {
+  background-color: #1e3932;
+}
+
 [data-theme="dark"] .heroHeading,
 [data-theme="dark"] .heroSubheading {
   color: #FFFFFF;
